[gd_scene load_steps=9 format=3 uid="uid://b27r2amkie2lx"]

[ext_resource type="Script" uid="uid://ci1o6ej7q3gf7" path="res://addons/hyh.digression/editor/nodes/EditorSubGraphNode.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://c5ll5urk64ggp" path="res://addons/hyh.digression/icons/icon_gui_option_arrow.svg" id="8_qm7sb"]
[ext_resource type="Texture2D" uid="uid://cl0ddfkgw2qmu" path="res://addons/hyh.digression/icons/icon_object.svg" id="9_nopv5"]
[ext_resource type="Texture2D" uid="uid://g30bydo2d3jj" path="res://addons/hyh.digression/icons/icon_load.svg" id="10_eg1tm"]
[ext_resource type="Texture2D" uid="uid://cokaiidw4802f" path="res://addons/hyh.digression/icons/icon_edit.svg" id="11_uu1vl"]
[ext_resource type="Texture2D" uid="uid://d65jtbo3b07t" path="res://addons/hyh.digression/icons/icon_clear.svg" id="12_ct14w"]
[ext_resource type="Texture2D" uid="uid://duuoxdtasrxyf" path="res://addons/hyh.digression/icons/icon_duplicate.svg" id="13_flh6b"]
[ext_resource type="Texture2D" uid="uid://ovo8yq3kwwte" path="res://addons/hyh.digression/icons/icon_save.svg" id="14_3fkq1"]

[node name="EditorSubGraphNode" type="GraphNode"]
offset_right = 503.0
offset_bottom = 94.0
theme_type_variation = &"ControlGraphNode"
title = "Sub-graph"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("4")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="HB" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="ResourceButton" type="Button" parent="MC/VB/HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "<empty>"
flat = true

[node name="ResourceMenuButton" type="MenuButton" parent="MC/VB/HB"]
layout_mode = 2
icon = ExtResource("8_qm7sb")
item_count = 12
popup/item_0/text = "New CutsceneGraph"
popup/item_0/icon = ExtResource("9_nopv5")
popup/item_0/id = 0
popup/item_1/id = 10
popup/item_1/separator = true
popup/item_2/text = "Load"
popup/item_2/icon = ExtResource("10_eg1tm")
popup/item_2/id = 2
popup/item_3/text = "Edit"
popup/item_3/icon = ExtResource("11_uu1vl")
popup/item_3/id = 3
popup/item_4/text = "Clear"
popup/item_4/icon = ExtResource("12_ct14w")
popup/item_4/id = 4
popup/item_5/text = "Make Unique"
popup/item_5/icon = ExtResource("13_flh6b")
popup/item_5/id = 5
popup/item_6/text = "Save"
popup/item_6/icon = ExtResource("14_3fkq1")
popup/item_6/id = 6
popup/item_7/id = 8
popup/item_7/separator = true
popup/item_8/text = "Show in Filesystem"
popup/item_8/id = 7
popup/item_9/id = 11
popup/item_9/separator = true
popup/item_10/text = "Copy"
popup/item_10/id = 9
popup/item_11/text = "Paste"
popup/item_11/id = 11

[node name="HB2" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB2"]
layout_mode = 2
text = "Entry Point:"

[node name="EntryPointOption" type="OptionButton" parent="MC/VB/HB2"]
layout_mode = 2
flat = true
selected = 0
item_count = 1
popup/item_0/text = "entry_point"
popup/item_0/id = 0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="MC/VB/HB/ResourceButton" to="." method="_on_resource_button_pressed"]
[connection signal="about_to_popup" from="MC/VB/HB/ResourceMenuButton" to="." method="_on_resource_menu_button_about_to_popup"]
[connection signal="item_selected" from="MC/VB/HB2/EntryPointOption" to="." method="_on_entry_point_option_item_selected"]
